syntax = "proto3";

option go_package = "edm-entities-signing-workflows-presentation-abstractions";

package Edm.Entities.Signing.Workflows.Presentation.Abstractions;

option csharp_namespace = "Edm.Entities.Signing.Workflows.Presentation.Abstractions";

import "Kafka/Results/WorkflowCompleted/Contracts/Statuses/workflow_completed_entities_signing_workflow_result_status.proto";

message WorkflowCompletedEntitiesSigningWorkflowResult {
  string entity_id = 1;
  string workflow_id = 2;
  WorkflowCompletedEntitiesSigningWorkflowResultStatus status = 3;
  string current_user_id = 4;
}

